--- a/ui/wizard/ui_entity.ui
+++ b/ui/wizard/ui_entity.ui
@@ -43,7 +43,7 @@
         </size>
        </property>
        <property name="placeholderText">
-        <string>Table description</string>
+        <string>Entity description</string>
        </property>
       </widget>
      </item>
@@ -82,7 +82,7 @@
      <item row="0" column="1">
       <widget class="QLineEdit" name="edtTable">
        <property name="placeholderText">
-        <string>Table name</string>
+        <string>Entity name</string>
        </property>
       </widget>
      </item>
