--- a/ui/ui_geoodk_converter.ui
+++ b/ui/ui_geoodk_converter.ui
@@ -55,7 +55,7 @@
         <item row="4" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QCheckBox" name="checkBox">
+           <widget class="QCheckBox" name="ck_social_tenure">
             <property name="text">
              <string>Include Social Tenure Relationship tables</string>
             </property>
