--- a/ui/ui_geoodk_import.ui
+++ b/ui/ui_geoodk_import.ui
@@ -61,7 +61,7 @@
           <item row="3" column="0">
            <widget class="QGroupBox" name="groupBox_2">
             <property name="title">
-             <string>Click Save to start import process ( import report will appear in the text below)</string>
+             <string>Click Save to start import process</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_5">
              <item row="2" column="0">
