--- a/ui/ui_mobile_upload_form.ui
+++ b/ui/ui_mobile_upload_form.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>209</height>
+    <height>224</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,10 +32,24 @@
     </widget>
    </item>
    <item row="1" column="2">
-    <widget class="QComboBox" name="cbo_path"/>
+    <widget class="QComboBox" name="cbo_path">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>30</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item row="3" column="2">
-    <widget class="QLineEdit" name="txt_path"/>
+    <widget class="QLineEdit" name="txt_path">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>30</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item row="3" column="0" colspan="2">
     <layout class="QGridLayout" name="gridLayout_2">
