--- a/ui/wizard/ui_entity.ui
+++ b/ui/wizard/ui_entity.ui
@@ -34,7 +34,7 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="1">
+     <item row="2" column="1">
       <widget class="QLineEdit" name="edtDesc">
        <property name="minimumSize">
         <size>
@@ -47,7 +47,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
+     <item row="2" column="0">
       <widget class="QLabel" name="label_2">
        <property name="minimumSize">
         <size>
@@ -83,6 +83,20 @@
       <widget class="QLineEdit" name="edtTable">
        <property name="placeholderText">
         <string>Entity name</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Display Name</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="txt_display_name">
+       <property name="placeholderText">
+        <string>Entity display name</string>
        </property>
       </widget>
      </item>
