--- a/ui/wizard/ui_column_editor.ui
+++ b/ui/wizard/ui_column_editor.ui
@@ -49,7 +49,7 @@
    <item row="4" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Form Label</string>
+      <string>Column Label</string>
      </property>
     </widget>
    </item>
