--- a/ui/wizard/ui_entity.ui
+++ b/ui/wizard/ui_entity.ui
@@ -89,7 +89,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Display Name</string>
+        <string>Entity Label</string>
        </property>
       </widget>
      </item>
